[package]
name = "hd-wallet"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-btc-fork = { path = "../tcx-btc-fork" }
tcx-chain = { path = "../tcx-chain" }
tcx-bch = { path = "../tcx-bch" }
tcx-substrate = { path = "../tcx-substrate" }
tcx-tron = { path = "../tcx-tron" }
tcx-tezos = { path = "../tcx-tezos" }
tcx-filecoin = { path = "../tcx-filecoin" }

hex = "0.4.0"
tcx = { path = "../tcx" }
prost = "0.6.1"
bytes = "0.5.4"
prost-types = "0.6.1"

bch_addr = "0.1.0"
bitcoin = "0.25.1"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.0"
bitcoin_hashes = "0.9.3"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"

[[example]]
name = "hd_store_import"
path = "./example/hd_store_import.rs"

[[example]]
name = "export_mnemonic"
path = "./example/export_mnemonic.rs"
