[package]
name = "tcx-ckb"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.6.1"
bytes = "0.5.4"
blake2b-rs = "0.1.5"
thiserror = "1.0"
byteorder = "1.3.2"
bech32 = "0.7.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"

hex = "0.4.0"
lazy_static = "1.4.0"

