[package]
name = "tcx-tezos"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-chain = { path = "../tcx-chain" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }

blake2b_simd = "0.5.10"
hex = "0.3.1"
bitcoin = "0.29.2"
ring = "0.16.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "0.5.4"